--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "front",
+  "name": "charging-station-management-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Frontend for Charging Station Management System",
   "type": "module",
   "scripts": {
     "dev": "vite",
