--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL=https://overintense-hee-unaxiomatic.ngrok-free.dev/
+VITE_API_BASE_URL=https://overintense-hee-unaxiomatic.ngrok-free.dev/evchargingstation
 # Set to 'true' to use mock API for testing, 'false' for real API
-VITE_USE_MOCK_API=true
+VITE_USE_MOCK_API=false
