--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-leaflet": "^5.0.0",
     "react-router": "^7.9.1",
     "react-router-dom": "^7.9.2",
+    "recharts": "^3.3.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
