--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-VITE_API_BASE_URL=https://unendued-somnolent-rosemarie.ngrok-free.dev/evchargingstation
+#VITE_API_BASE_URL=https://unendued-somnolent-rosemarie.ngrok-free.dev/evchargingstation # Khoa
 #VITE_API_BASE_URL=https://overintense-hee-unaxiomatic.ngrok-free.dev/evchargingstation  #Nhân
+VITE_API_BASE_URL=https://juudensha.up.railway.app/evchargingstation # railway
 # Set to 'true' to use mock API for testing, 'false' for real API
 VITE_USE_MOCK_API=false
 
