--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 # Set to 'true' to use mock API for testing, 'false' for real API
 VITE_USE_MOCK_API=false
 
-VITE_API_BASE_URL=https://unendued-somnolent-rosemarie.ngrok-free.dev/evchargingstation#Khoa
-#VITE_API_BASE_URL=https://juudensha.up.railway.app/evchargingstation
+#VITE_API_BASE_URL=https://unendued-somnolent-rosemarie.ngrok-free.dev/evchargingstation#Khoa
+VITE_API_BASE_URL=https://juudensha.up.railway.app/evchargingstation
 #VITE_API_BASE_URL=https://bruna-huffy-superadmirably.ngrok-free.dev/evchargingstation
