--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # VITE_API_BASE_URL=https://overintense-hee-unaxiomatic.ngrok-free.dev/evchargingstation  #Nhân
 
 # VITE_API_BASE_URL=https://unendued-somnolent-rosemarie.ngrok-free.dev/evchargingstation     #Khoa
-# VITE_API_BASE_URL=https://juudensha.up.railway.app/evchargingstation
-VITE_API_BASE_URL=https://bruna-huffy-superadmirably.ngrok-free.dev/evchargingstation
+ VITE_API_BASE_URL=https://juudensha.up.railway.app/evchargingstation
+#VITE_API_BASE_URL=https://bruna-huffy-superadmirably.ngrok-free.dev/evchargingstation
 # Google OAuth
 VITE_GOOGLE_CLIENT_ID=102327400957-mlr70knom5iamckfoe80000t402t8mc5.apps.googleusercontent.com
