--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-leaflet": "^5.0.0",
     "react-router": "^7.9.1",
     "react-router-dom": "^7.9.2",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.3.0",
     "tailwindcss": "^4.1.13"
   },
