--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 #VITE_API_BASE_URL=https://overintense-hee-unaxiomatic.ngrok-free.dev/evchargingstation  #Nhân
-#VITE_API_BASE_URL=https://parliamentarily-fillable-leesa.ngrok-free.dev/evchargingstation 
-VITE_API_BASE_URL=https://unendued-somnolent-rosemarie.ngrok-free.dev/evchargingstation     #Khoa
+VITE_API_BASE_URL=https://parliamentarily-fillable-leesa.ngrok-free.dev/evchargingstation 
+#VITE_API_BASE_URL=https://unendued-somnolent-rosemarie.ngrok-free.dev/evchargingstation     #Khoa
 #  VITE_API_BASE_URL=https://juudensha.up.railway.app/evchargingstation
 #VITE_API_BASE_URL=http://localhost:8080/evchargingstation
 #VITE_API_BASE_URL=https://bruna-huffy-superadmirably.ngrok-free.dev/evchargingstation
